--- a/app/design/frontend/cleo/bhoomisewa/template/page/html/header-v1.0.phtml
+++ b/app/design/frontend/cleo/bhoomisewa/template/page/html/header-v1.0.phtml
@@ -12,7 +12,7 @@
 
         </div>
     </div>
-    <div id="page-header-section-02">
+    <div id="page-header-section-02">testasdfasfsad
         <?php echo $this->getChildHtml('topMenu'); ?>
     </div>
 </header>
