--- a/app/design/frontend/cleo/bhoomisewa/template/page/1column.phtml
+++ b/app/design/frontend/cleo/bhoomisewa/template/page/1column.phtml
@@ -11,7 +11,7 @@
     <head>
         <?php echo $this->getChildHtml('head'); ?>
     </head>
-    <body<?php echo $_bodyClass; ?>><div id="wrapper">
+    <body<?php echo $_bodyClass; ?> ng-app="myApp"><div id="wrapper">
         <?php echo $this->getChildHtml('after_body_start'); ?>
         <a id="top"></a>
 		                <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('weltpixel_global_header_promo')->toHtml() ?>
