--- a/app/design/frontend/cleo/bhoomisewa/template/contacts/form.phtml
+++ b/app/design/frontend/cleo/bhoomisewa/template/contacts/form.phtml
@@ -25,7 +25,7 @@ if (strlen($apiKey)):
 <?php if ($_helper->getContactLatitude() && $_helper->getContactLatitude()): ?>
                     var myLatlng = new google.maps.LatLng(<?php echo $_helper->getContactLatitude() ?>, <?php echo $_helper->getContactLongitude() ?>) ;
 <?php else: ?>
-                    var myLatlng = new google.maps.LatLng(40.6700, -73.9400) ; //some default
+                    var myLatlng = new google.maps.LatLng(30.3118257, 78.0375107) ; //some default
 <?php endif; ?>
                 var mapOptions = {
                     zoom: 11,
